Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58454

Q_ENUMs from one class cannot be used as a Q_INVOKABLE function parameter of another class

XMLWordPrintable

    • 3e9b752bf4114b2b06e2f8f65aad67606dfc0215

      This is a clone of QTBUG-19741, which is closed but is still broken in Qt 5.8.

      When declaring in the same class one enumeration, the corresponding Q_ENUM's, and a Q_INVOKABLE function with the enumeration in parameter, the function can be called from qml.
      But if the enumeration comes from another class, the Q_INVOKABLE function cannot be called with the following error message:
      "Error: Unknown method parameter type"

        1. qtbug58454.zip
          3 kB
          Mitch Curtis
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            VersalEszett Julius Bullinger
            Votes:
            22 Vote for this issue
            Watchers:
            30 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes